--- a/package.json
+++ b/package.json
@@ -13,26 +13,30 @@
     "@prisma/client": "^7.3.0",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
     "cookie": "^1.1.1",
     "dotenv": "^17.2.4",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-intl": "^4.8.2",
-    "nextjs-toploader": "^3.9.17",
     "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.33",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/streamifier": "^0.1.2",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
