--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
